--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
     var listOfObjects = [];
 
     function ChangeDescription(CurrentID, NewID, Add) {   
-      if (NewID.charAt(NewID.length - 1) == w) {
+      if (NewID.charAt(NewID.length - 1) == 'w') {
         alert('It is shown');
       }
 
