--- a/hit-the-target.html
+++ b/hit-the-target.html
@@ -44,6 +44,9 @@ tr:nth-child(odd){background-color: #0f0f0f}
     height: 150px;
     border-radius: 80px;
 }
+#HomeButton {
+    position: absolute;	
+}
 #endscreen{
     position: absolute;
     text-align: center;
@@ -65,7 +68,7 @@ tr:nth-child(odd){background-color: #0f0f0f}
     <link rel="stylesheet" href="Global.css">
 </head>
 <body>
-<button onclick="location.href = 'index.html';" id="myButton" class="float-left submit-button" >Home</button>
+<button onclick="location.href = 'index.html';" id="myButton" class="float-left submit-button" >Home Game</button>
 <div id="gameover"hidden="true">
     <b style="color: red;font-size: 60px;">Game Over</b>
     <p style="color: white;font-size: 40px;">(you suck)</p>
