--- a/hit-the-target.html
+++ b/hit-the-target.html
@@ -68,7 +68,7 @@ tr:nth-child(odd){background-color: #0f0f0f}
     <link rel="stylesheet" href="Global.css">
 </head>
 <body>
-<button onclick="location.href = 'index.html';" id="myButton HomeButton" class="float-left submit-button" >Home</button>
+<button onclick="location.href = 'index.html';" id="myButton" class="float-left submit-button" >Home</button>
 <div id="gameover"hidden="true">
     <b style="color: red;font-size: 60px;">Game Over</b>
     <p style="color: white;font-size: 40px;">(you suck)</p>
