--- a/index.html
+++ b/index.html
@@ -203,12 +203,13 @@
 <body>
 
 <div class>
+  
+<img src="Settings.png" id="SettingsButton">
+  
 <center>
   
 <div class=logo>
-<center>
 <img src="BasicLogo.png">
-</center>
 </div>
   
 <header>
