--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     #SettingsButton {
       width: 50px;
       height: 50px;
+      position: absolute;
     }
     
     #SettingsButton:hover {
