--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     #SettingsButton {
       width: 50px;
       height: 50px;
+      background-color: #111111;
       position: absolute;
     }
     
