--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
       position: absolute;
     }
     
-    #SettingsButton:hover {
-      background-color: #262626;
+    #SettingsMenu {
+       background-color: rgba(128, 128, 128, 0.5);
+       height: 500px;
+       width: 150px;
     }
     
     @keyframes animateCloseCrop {
@@ -214,8 +216,17 @@
 
 <div class>
   
-<img src="Settings.png" id="SettingsButton" onclick='DisplaySettings()'>
-  
+  <div id="Settings">
+    <img src="Settings.png" id="SettingsButton" onclick='DisplaySettings()'>
+    <div id="SettingsMenu">
+      <p>Animation Speed: </p>
+      <p>Other Setting: </p>
+      <p>Other Setting: </p>
+      <p>Other Setting: </p>
+      <p>Other Setting: </p>
+      <p>Dark Mode: </p>
+    </div>
+  </div>
 <center>
   
 <div class=logo>
