--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
     
     #SettingsMenu {
        background-color: rgba(128, 128, 128, 0.5);
-       height: 500px;
-       width: 150px;
+       height: 400px;
+       width: 200px;
+       position: absolute;
+       border-radius: 15px;
     }
     
     @keyframes animateCloseCrop {
