--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
       width: 50px;
       height: 50px;
       position: absolute;
+      left: 65px;
+      z-index: -1;
     }
     
     #SettingsMenu {
