--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     
     #SettingsMenu {
        background-color: rgba(128, 128, 128, 1);
-       height: 300px;
+       height: 100px;
        width: 200px;
        position: absolute;
        border-radius: 15px;
@@ -230,11 +230,7 @@
     <img src="Settings.png" id="SettingsButton" onclick='DisplaySettings()'>
     <div id="SettingsMenu">
       <div id="SettingsText">
-      <p>Animation Speed: </p>
-      <p>Other Setting: </p>
-      <p>Other Setting: </p>
-      <p>Other Setting: </p>
-      <p>Other Setting: </p>
+      Animation Speed:
       Dark Mode:
       </div>
     </div>
