--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     
     #SettingsMenu {
        background-color: rgba(128, 128, 128, 1);
-       height: 100px;
+       height: 50px;
        width: 200px;
        position: absolute;
        border-radius: 15px;
@@ -230,7 +230,7 @@
     <img src="Settings.png" id="SettingsButton" onclick='DisplaySettings()'>
     <div id="SettingsMenu">
       <div id="SettingsText">
-      Animation Speed:
+      Animation Speed: <br />
       Dark Mode:
       </div>
     </div>
