--- a/index.html
+++ b/index.html
@@ -232,12 +232,14 @@
 
 <div class>
   
-  <div id="SettingsHidden">
+  <div id="Settingd">
     <img src="Settings.png" id="SettingsButton" onclick='DisplaySettings()'>
-    <div id="SettingsMenu">
-      <div id="SettingsText">
-      Animation Speed: <br />
-      Dark Mode:
+    <div id="SettingsHidden">
+      <div id="SettingsMenu">
+        <div id="SettingsText">
+        Animation Speed: <br />
+        Dark Mode:
+       </div>
       </div>
     </div>
   </div>
