--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     #SettingsMenu {
        background-color: rgba(128, 128, 128, 1);
        height: 75px;
-       width: 200px;
+       width: 500px;
        position: absolute;
        border-radius: 15px;
        left: 65px;
@@ -262,7 +262,7 @@
     <div id="SettingsHidden">
       <div id="SettingsMenu">
         <div id="SettingsText">
-        Animation Speed: <br />
+        Animation Speed: <input type="range" min="1" max="100" value="50" class="slider" id="myRange"> <br />
         Dark Mode:
        </div>
       </div>
