--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
     
     #SettingsText {
       padding: 15px; 
+      font-size: 25px;
     }
     
     /* Hidden Buttons */
@@ -293,8 +294,9 @@
     <div id="SettingsHidden">
       <div id="SettingsMenu">
         <div id="SettingsText">
-        Animation Speed: <input type="range" min="1" max="100" value="50" class="slider" id="myRange"> <br />
-        Dark Mode:
+        <center>Animation Speed</center> 
+        <input type="range" min="1" max="100" value="50" class="slider" id="myRange"> <br />
+        <center>Dark Mode</center>
        </div>
       </div>
     </div>
