--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     
     #SettingsMenu {
        background-color: rgba(128, 128, 128, 1);
-       height: 125px;
+       height: 100px;
        width: 300px;
        position: absolute;
        border-radius: 15px;
@@ -296,7 +296,7 @@
         <div id="SettingsText">
         <center>Animation Speed</center> 
         <input type="range" min="1" max="100" value="50" class="slider" id="AnimationSpeed"> <br />
-        <p id="AnimationSpeedText"></p>
+        <center id="AnimationSpeedText"></center>
        </div>
       </div>
     </div>
