--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
           <center id="AnimationSpeedText"></center>
           <hr />
           <center>Dark Mode</center> 
-          <center>nput type="checkbox" class="slider" id="AnimationSpeed"></center> <br />
+          <center><input type="checkbox" class="slider" id="AnimationSpeed"></center> <br />
           <center id="DarkModeText"></center>
        </div>
       </div>
