--- a/index.html
+++ b/index.html
@@ -295,11 +295,11 @@
       <div id="SettingsMenu">
         <div id="SettingsText">
           <center>Animation Speed</center> 
-          <input type="range" min="0" max="100" value="0.5" class="slider" id="AnimationSpeed"> <br />
+          <input type="range" min="0" max="100" value="5" class="slider" id="AnimationSpeed"> <br />
           <center id="AnimationSpeedText"></center>
           <hr />
           <center>Dark Mode</center> 
-          <center><input type="checkbox" class="slider" id="AnimationSpeed"></center> <br />
+          <center><input type="checkbox"></center> <br />
           <center id="DarkModeText"></center>
        </div>
       </div>
