--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
 <!--- 2048 Button Code ---!>
                            
 <div class = button_div>
-<input type="button" value="2048 Game" id="myButton" class="game_button" onclick="ChangeDescription('TwentyFourtyEightHidden', 'TwentyFourtyEightShown', false)">                                                                                                                                                                           
+<input type="button" value="2048" id="myButton" class="game_button" onclick="ChangeDescription('TwentyFourtyEightHidden', 'TwentyFourtyEightShown', false)">                                                                                                                                                                           
 </div>  
 
 <div id="TwentyFourtyEightHidden" class="GameDescriptionUI">
@@ -453,7 +453,8 @@
     }
 
     function ChangeDescription(CurrentID, NewID, Add) {   
-      document.documentElement.style.setProperty('--animation-speed', (document.getElementById("AnimationSpeed").value / 10).toString() + 's');
+      document.documentElement.style.setProperty('--animation-speed', (slider.value / 10).toString() + 's');
+      output.innerHTML = slider.value / 10;       
 
       var element = document.getElementById(CurrentID);
       if (element == null) {
