--- a/index.html
+++ b/index.html
@@ -281,6 +281,13 @@
       background: #04AA6D;
       cursor: pointer;
     }
+    
+    .checkbox {
+      width: 40px;
+      height: 40px;
+      border-radius: 5px;
+      background: #04AA6D;
+    }
   </style>
   
   
@@ -299,7 +306,7 @@
           <center id="AnimationSpeedText"></center>
           <hr />
           <center>Dark Mode</center> 
-          <center><input type="checkbox"></center> <br />
+          <center><input type="checkbox" class="checkbox"></center> <br />
           <center id="DarkModeText"></center>
        </div>
       </div>
