--- a/index.html
+++ b/index.html
@@ -285,8 +285,15 @@
     .checkbox {
       width: 40px;
       height: 40px;
+      appearance: none;
+      -webkit-appearance: none;
+      background-color: #4a4a4a;
       border-radius: 5px;
-      background: #04AA6D;
+      cursor: pointer;
+    }
+
+    .checkbox:checked {
+      background-color: #d9d9d9;
     }
   </style>
   
