--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
           <center id="AnimationSpeedText"></center>
           <hr />
           <center>Dark Mode</center> 
-          <center><input type="checkbox" class="checkbox"></center> <br />
+          <center><input type="checkbox" class="checkbox" onclick="ChangeStyle"></center> <br />
           <center id="DarkModeText"></center>
        </div>
       </div>
@@ -351,7 +351,7 @@
 <!--- 2048 Button Code ---!>
                            
 <div class = button_div>
-<input type="button" value="2048 Game" id="myButton" class="game_button" onclick="ChangeDescription('TwentyFourtyEightHidden', 'TwentyFourtyEightShown', false)">                                                                                                                                                                           
+<input type="button" value="2048" id="myButton" class="game_button" onclick="ChangeDescription('TwentyFourtyEightHidden', 'TwentyFourtyEightShown', false)">                                                                                                                                                                           
 </div>  
 
 <div id="TwentyFourtyEightHidden" class="GameDescriptionUI">
