--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
           <center id="AnimationSpeedText"></center>
           <hr />
           <center>Dark Mode</center> 
-          <center><input type="checkbox" class="checkbox" onclick="ChangeStyle()"></center> <br />
+          <center><input type="checkbox" class="checkbox" onclick="ChangeStyle()" id="DarkModeCheckbox"></center> <br />
           <center id="DarkModeText"></center>
        </div>
       </div>
@@ -457,7 +457,7 @@
   <script>
     var slider = document.getElementById("AnimationSpeed");
     var output = document.getElementById("AnimationSpeedText"); 
-    var checkbox = document.getElementById("checkbox");
+    var checkbox = document.getElementById("DarkModeCheckbox");
     output.innerHTML = slider.value;
 
     var darkBackground = '#121212';
