--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
           <input type="range" min="0" max="100" value="5" class="slider" id="AnimationSpeed"> <br />
           <center id="AnimationSpeedText"></center>
           <hr />
-          <center>Dark Mode</center> 
+          <center>Mode</center> 
           <center><input type="checkbox" class="checkbox" onclick="ChangeStyle()" id="DarkModeCheckbox"></center> <br />
           <center id="DarkModeText"></center>
        </div>
