--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
 <!--- 2048 Button Code ---!>
                            
 <div class = button_div>
-<input type="button" value="2048" id="myButton" class="game_button" onclick="ChangeDescription('TwentyFourtyEightHidden', 'TwentyFourtyEightShown', false)">                                                                                                                                                                           
+<input type="button" value="2048 Game" id="myButton" class="game_button" onclick="ChangeDescription('TwentyFourtyEightHidden', 'TwentyFourtyEightShown', false)">                                                                                                                                                                           
 </div>  
 
 <div id="TwentyFourtyEightHidden" class="GameDescriptionUI">
@@ -518,7 +518,7 @@
     }
 
     function LoadWebsite() {
-      if (document.cookie = "darkMode") {
+      if (document.cookie == "darkMode") {
          checkbox.checked = false;
       } else {
          checkbox.checked = true;
