--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
 <!--- 2048 Button Code ---!>
                            
 <div class = button_div>
-<input type="button" value="2048 Game" id="myButton" class="game_button" onclick="ChangeDescription('TwentyFourtyEightHidden', 'TwentyFourtyEightShown', false)">                                                                                                                                                                           
+<input type="button" value="2048" id="myButton" class="game_button" onclick="ChangeDescription('TwentyFourtyEightHidden', 'TwentyFourtyEightShown', false)">                                                                                                                                                                           
 </div>  
 
 <div id="TwentyFourtyEightHidden" class="GameDescriptionUI">
@@ -518,8 +518,9 @@
     }
 
     function LoadWebsite() {
-      alert(document.cookie);
-      if (document.cookie == "darkMode") {
+      var value = GetCookieValue(document.cookie);
+      alert(value);
+      if (value == "darkMode") {
          checkbox.checked = false;
       } else {
          checkbox.checked = true;
@@ -527,6 +528,17 @@
       ChangeStyle();
     } 
   
+    function GetCookieValue(cookie) {
+      var i = 0;
+      for (i = 0; i < cookie.length; i++) {
+        if (cookie[i] == ';') {
+          return c.substring(0, i);
+          break;
+        }
+      }
+      return cookie;
+    }
+
     function ChangeDescription(CurrentID, NewID, Add) {   
       document.documentElement.style.setProperty('--animation-speed', (slider.value / 10).toString() + 's');
       output.innerHTML = slider.value / 10;       
