--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
 <!--- 2048 Button Code ---!>
                            
 <div class = button_div>
-<input type="button" value="2048" id="myButton" class="game_button" onclick="ChangeDescription('TwentyFourtyEightHidden', 'TwentyFourtyEightShown', false)">                                                                                                                                                                           
+<input type="button" value="2048 Game" id="myButton" class="game_button" onclick="ChangeDescription('TwentyFourtyEightHidden', 'TwentyFourtyEightShown', false)">                                                                                                                                                                           
 </div>  
 
 <div id="TwentyFourtyEightHidden" class="GameDescriptionUI">
@@ -532,7 +532,7 @@
       var i = 0;
       for (i = 0; i < cookie.length; i++) {
         if (cookie[i] == ';') {
-          return c.substring(0, i);
+          return cookie.substring(0, i - 1);
           break;
         }
       }
