--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
       var i = 0;
       for (i = 0; i < cookie.length; i++) {
         if (cookie[i] == ';') {
-          return cookie.substring(0, i - 1);
+          return cookie.substring(0, i);
           break;
         }
       }
