--- a/Minecraft/index.html
+++ b/Minecraft/index.html
@@ -20,6 +20,8 @@
 	</head>
 	
 	<body oncontextmenu="return false">
+		<button onclick="location.href = '../index.html';" id="myButton" class="float-left submit-button" style="left:0; right:100; position:absolute;">Home</button>
+		<button onclick="location.href = 'multiplayer.html.html';" id="myButton" class="float-left submit-button" style="left:100; right:0; position:absolute;">Multiplayer</button>
 		<!-- Render surface -->
 		<canvas id="renderSurface"></canvas>
 		
