--- a/Minecraft/multiplayer.html
+++ b/Minecraft/multiplayer.html
@@ -22,6 +22,8 @@
 	</head>
 
 	<body oncontextmenu="return false">
+		<button onclick="location.href = '../index.html';" id="myButton" class="float-left submit-button" style="left:0; right:100; position:absolute;">Home</button>
+		<button onclick="location.href = 'index.html" id="myButton" class="float-left submit-button" style="left:100; right:0; position:absolute;">Singleplayer</button>
 		<!-- Render surface -->
 		<canvas id="renderSurface" style="visiblity: hidden"></canvas>
 
