--- a/Minecraft/index.html
+++ b/Minecraft/index.html
@@ -17,6 +17,7 @@
 		<script src="js/render.js" type="text/javascript"></script>
 		<script src="js/physics.js" type="text/javascript"></script>
 		<script src="js/player.js" type="text/javascript"></script>
+		<link rel="stylesheet" href="../../Global.css">
 	</head>
 	
 	<body oncontextmenu="return false">
