--- a/Minecraft/multiplayer.html
+++ b/Minecraft/multiplayer.html
@@ -19,6 +19,7 @@
 		<script src="js/physics.js" type="text/javascript"></script>
 		<script src="js/player.js" type="text/javascript"></script>
 		<script src="js/network.js" type="text/javascript"></script>
+		<link rel="stylesheet" href="../../Global.css">
 	</head>
 
 	<body oncontextmenu="return false">
