--- a/index.html
+++ b/index.html
@@ -518,6 +518,7 @@
       }
       cookie_value += (slider.value / 10).tostring();
       document.cookie = cookie_value;
+      alert(cookie_value);
     }
 
     function LoadWebsite() {
