--- a/index.html
+++ b/index.html
@@ -510,30 +510,20 @@
     }
 
     function SaveCookies() {
-      var cookie_value;
       if (!checkbox.checked) {
-        cookie_value = "darkMode";
+        document.cookie = "darkMode";
       } else {
-        cookie_value = "lightMode";
+        document.cookie = "lightMode";
       }
-      cookie_value += (slider.value / 10).tostring();
-      document.cookie = cookie_value;
-      alert(cookie_value);
     }
 
     function LoadWebsite() {
       var value = GetCookieValue(document.cookie);
-      //var value2 = GetCookieValue(document.cookie2);
-      alert(document.cookie);
       if (value == "darkMode") {
          checkbox.checked = false;
       } else {
          checkbox.checked = true;
       }
-      
-      document.documentElement.style.setProperty('--animation-speed', value2 + 's');
-      slider.value = value2;
-      output.innerHTML = value2;
       ChangeStyle();
     } 
   
