--- a/index.html
+++ b/index.html
@@ -460,8 +460,9 @@
     <p>You click the cookie. And then you buy upgrades</p>
   </div>
   
-  <input type="button" value="no game to play L ratio bozo" class="DescriptionButton" onclick="window.location.href='#'">
-  <input type="button" value="Close" class="DescriptionButton" onclick="ChangeDescription('greg_stupidShown', 'greg_stupidHidden', true)">
+<!--- Greg Stupid Button ---!>
+<div class = button_div>
+  <input type="button" value="Greg Stupid" id="myButton" class="game_button" onclick="ChangeDescription('gred_stupidHidden', 'greg_stupidShown', false)">
 </div>    
 
 <div id="greg_stupidHidden" class="GameDescriptionUI">
