--- a/index.html
+++ b/index.html
@@ -462,15 +462,16 @@
   
 <!--- Greg Stupid Button ---!>
 <div class = button_div>
-  <input type="button" value="Greg Stupid" id="myButton" class="game_button" onclick="ChangeDescription('gred_stupidHidden', 'greg_stupidShown', false)">
+  <input type="button" value="Greg Stupid" id="myButton" class="game_button" onclick="ChangeDescription('greg_stupidHidden', 'greg_stupidShown', false)">
 </div>    
 
 <div id="greg_stupidHidden" class="GameDescriptionUI">
   <div id="GameDescription">
     <p>greg thinks i dont know how to use his shitty ui.</p>
   </div>
+
   <input type="button" value="Play Game" class="DescriptionButton" onclick="window.location.href='snake-game.html'">
-  <input type="button" value="Close" class="DescriptionButton" onclick="ChangeDescription('SnakeShown', 'SnakeHidden', true)">
+  <input type="button" value="Close" class="DescriptionButton" onclick="ChangeDescription('greg_stupidShown', 'greg_stupidHidden', true)">
 </div>
 
   <script>
