--- a/index.html
+++ b/index.html
@@ -459,6 +459,9 @@
   <div id="GameDescription">
     <p>You click the cookie. And then you buy upgrades</p>
   </div>
+
+  <input type="button" value="Play Game" class="DescriptionButton" onclick="window.location.href='cookie-clicker-master/index.html'">
+  <input type="button" value="Close" class="DescriptionButton" onclick="ChangeDescription('CookieClickerShown', 'CookieClickerHidden', true)">
 </div>
 
   <script>
