--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
     #SettingsShown {
       animation-name: OpenSettingsMenu;
       animation-duration: var(--animation-speed); 
+      -webkit-transform: translateX(0%);
     }
     
     #SettingsText {
@@ -352,7 +353,7 @@
 
 <div id="HitTheTargetHidden" class="GameDescriptionUI">
   <div id="GameDescription">
-    <p>You hit a target. Then you dont hit the boxes. Then you win.</p>
+    <p>I am a beliver that this is self explanetory. If it is not then you are dumb.</p>
   </div>
   
   <input type="button" value="Play Game" class="DescriptionButton" onclick="window.location.href='hit-the-target.html'">
@@ -362,12 +363,12 @@
 <!--- 2048 Button Code ---!>
                            
 <div class = button_div>
-<input type="button" value="2048 Game" id="myButton" class="game_button" onclick="ChangeDescription('TwentyFourtyEightHidden', 'TwentyFourtyEightShown', false)">                                                                                                                                                                           
+<input type="button" value="2048 Like Game" id="myButton" class="game_button" onclick="ChangeDescription('TwentyFourtyEightHidden', 'TwentyFourtyEightShown', false)">                                                                                                                                                                           
 </div>  
 
 <div id="TwentyFourtyEightHidden" class="GameDescriptionUI">
   <div id="GameDescription">
-    <p>You Should Know what 2048 is otherwise you are dumb</p>
+    <p>I would like this to include 2048 and 16384 but for now I am lazy</p>
   </div>
   
   <input type="button" value="Play Game" class="DescriptionButton" onclick="window.location.href='2048/2048-master/index.html'">
