--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <script src="script.js"></script>
 </head>
 <body onload="SetUpGames()">
-  <div class="header">Project Test List</div>
+  <div class="header">UNBLOCKED GAMES</div>
   <div class="Games" id="GamesList">
 
   </div>
@@ -16,5 +16,5 @@
       </div>
     </div>
   </div>
-  <div id="version">Version: 0.3</div>
+  <div id="version">Version: 0.35/div>
 </body>
