--- a/index.html
+++ b/index.html
@@ -10,11 +10,19 @@
 
   </div>
 
-  <div id="hidden">
+  <div id="Announcment">
     <div id="AnnouncmentBackground">
       <div id="AnnouncmentClose" onclick="CloseAnnouncment()">
       </div>
+      <div id="AnnouncmentData">
+       <div id="AnnouncmentName">
+         <div id="AnnouncmentNameText"></div>
+       </div>
+       <div id="AnnouncmentText">
+        
+       </div>
+      </div>
     </div>
   </div>
-  <div id="version">Version: 0.35</div>
+  <div id="version">Version: 0.375</div>
 </body>
