--- a/Projects/SpaceCompany/index.html
+++ b/Projects/SpaceCompany/index.html
@@ -51,8 +51,15 @@
 	
 	<!-- When you put the link in discord, it uses this tag to color the stripe on the embed -->
     	<meta name="theme-color" content="#ffffff">
+	
+	<style>
+	  .MakePosAbs {
+  	    position: absolute;
+	  }
+	</style>
 </head>
 <body style="height:100%">
+<button onclick="location.href = '../../index.html';" id="myButton" class="float-left submit-button MakePosAbs" >Home</button>
 <div id="loadScreen" style="width:100%; height:100%; background-color: black">
 	<div style="width:100%; height:3%"></div>
 	<div style="width:70%; font-size:72px; font-family: 'Orbitron', 'sans-serif'; font-weight: lighter; color:#ffffff; line-height:72px; text-align:center; margin: auto;">
