--- a/Projects/SpaceCompany/index.html
+++ b/Projects/SpaceCompany/index.html
@@ -52,6 +52,7 @@
 	<!-- When you put the link in discord, it uses this tag to color the stripe on the embed -->
     	<meta name="theme-color" content="#ffffff">
 	
+	<link rel="stylesheet" href="../../Global.css">	
 	<style>
 	  .MakePosAbs {
   	    position: absolute;
