--- a/Projects/PacMan/index.html
+++ b/Projects/PacMan/index.html
@@ -180,12 +180,12 @@
 				});
 			});
 		</script>
-	
-		<title>Lucio PANEPINTO - Pac-Man</title>
+		<link rel="stylesheet" href="../../Global.css">
+		<title>Pac Man Babe</title>
 	</head>
 		
 	<body>
-	
+		<button onclick="location.href = '../../index.html';" id="myButton" class="float-left submit-button MakePosAbs" >Home</button>
 		<div id="sound"></div>
 	
 		<div id="help">
