--- a/Projects/DogeLava/index.html
+++ b/Projects/DogeLava/index.html
@@ -37,15 +37,11 @@ button{
     padding: 30px;
 }
 
-.MakePosAbs {
-  position: absolute;
-}
-
     </style>
     <link rel="stylesheet" href="../../Global.css">
 </head>
 <body>
-    <button onclick="location.href = '../../index.html';" id="myButton" class="float-left submit-button MakePosAbs" >Home</button>
+    <div onclick="location.href = '../../index.html';" id="myButton" class="MakePosAbs" >Home</div>
     <canvas width="500" height="500"></canvas>
     <div id="endscreen" hidden>
         <b>You Died</b>
