--- a/Projects/DinoGame/index.html
+++ b/Projects/DinoGame/index.html
@@ -2546,7 +2546,7 @@ html[subframe] body {
 </head>
 
 <body id="t">
-  <button onclick="location.href = '../../index.html';" id="myButton" class="float-left submit-button MakePosAbs" >Home</button>
+  <div onclick="location.href = '../../index.html';" id="myButton" class="float-left submit-button MakePosAbs" >Home</div>
 <script>
   window.fbAsyncInit = function() {
     FB.init({
