--- a/Projects/Cookie Clicker/index.html
+++ b/Projects/Cookie Clicker/index.html
@@ -115,7 +115,7 @@ Feel free to alter this code to your liking, but please do not re-host it, do no
 		</div>
 
 		<div id="support">
-			<button onclick="location.href = '../../index.html';" id="myButton" class="float-left submit-button" >Home</button>
+			<center><button onclick="location.href = '../../index.html';" id="HomeButton">Home</button></center>
 		</div>
 	</div>
 
